# stereo_camera_calibration

./: CMakeLists.txt
include/: CameraCalibrationClass.h  SavingCalibrationDataClass.h
src/: CameraCalibrationClass.cpp  SavingCalibrationDataClass.cpp  main.cpp
